err/nighres.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cbstools'...
Listing './lib/python3.5/site-packages/nibabel'...
Listing './lib/python3.5/site-packages/nibabel/benchmarks'...
Listing './lib/python3.5/site-packages/nibabel/cifti2'...
Listing './lib/python3.5/site-packages/nibabel/cifti2/tests'...
Listing './lib/python3.5/site-packages/nibabel/externals'...
Listing './lib/python3.5/site-packages/nibabel/externals/tests'...
Listing './lib/python3.5/site-packages/nibabel/externals/tests/data'...
Listing './lib/python3.5/site-packages/nibabel/freesurfer'...
Listing './lib/python3.5/site-packages/nibabel/freesurfer/tests'...
Listing './lib/python3.5/site-packages/nibabel/gifti'...
Listing './lib/python3.5/site-packages/nibabel/gifti/tests'...
Listing './lib/python3.5/site-packages/nibabel/gifti/tests/data'...
Listing './lib/python3.5/site-packages/nibabel/nicom'...
Listing './lib/python3.5/site-packages/nibabel/nicom/tests'...
Listing './lib/python3.5/site-packages/nibabel/nicom/tests/data'...
Listing './lib/python3.5/site-packages/nibabel/streamlines'...
Listing './lib/python3.5/site-packages/nibabel/streamlines/tests'...
Listing './lib/python3.5/site-packages/nibabel/testing'...
Listing './lib/python3.5/site-packages/nibabel/tests'...
Listing './lib/python3.5/site-packages/nibabel/tests/data'...
Listing './lib/python3.5/site-packages/nibabel-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/nighres'...
Listing './lib/python3.5/site-packages/nighres/atlases'...
Listing './lib/python3.5/site-packages/nighres/atlases/brain-segmentation-prior3.0'...
Listing './lib/python3.5/site-packages/nighres/atlases/topology_lut'...
Listing './lib/python3.5/site-packages/nighres/brain'...
Compiling './lib/python3.5/site-packages/nighres/brain/extract_brain_region.py'...
***   File "./lib/python3.5/site-packages/nighres/brain/extract_brain_region.py", line 147
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nighres/brain/mgdm_segmentation.py'...
***   File "./lib/python3.5/site-packages/nighres/brain/mgdm_segmentation.py", line 276
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nighres/brain/mp2rage_skullstripping.py'...
***   File "./lib/python3.5/site-packages/nighres/brain/mp2rage_skullstripping.py", line 142
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nighres/cortex'...
Compiling './lib/python3.5/site-packages/nighres/cortex/cruise_cortex_extraction.py'...
***   File "./lib/python3.5/site-packages/nighres/cortex/cruise_cortex_extraction.py", line 208
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nighres/data'...
Listing './lib/python3.5/site-packages/nighres/filtering'...
Compiling './lib/python3.5/site-packages/nighres/filtering/filter_ridge_structures.py'...
***   File "./lib/python3.5/site-packages/nighres/filtering/filter_ridge_structures.py", line 102
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nighres/io'...
Compiling './lib/python3.5/site-packages/nighres/io/io_mesh.py'...
***   File "./lib/python3.5/site-packages/nighres/io/io_mesh.py", line 286
    print "vertex indices out of shape"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nighres/laminar'...
Compiling './lib/python3.5/site-packages/nighres/laminar/profile_sampling.py'...
***   File "./lib/python3.5/site-packages/nighres/laminar/profile_sampling.py", line 86
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nighres/laminar/volumetric_layering.py'...
***   File "./lib/python3.5/site-packages/nighres/laminar/volumetric_layering.py", line 118
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nighres/surface'...
Compiling './lib/python3.5/site-packages/nighres/surface/probability_to_levelset.py'...
***   File "./lib/python3.5/site-packages/nighres/surface/probability_to_levelset.py", line 83
    print sys.exc_info()[0]
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nighres-1.0.0b9.egg-info'...
Listing './lib/python3.5/site-packages/nisext'...
Listing './lib/python3.5/site-packages/nisext/tests'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
